--- a/style.css
+++ b/style.css
@@ -6,14 +6,14 @@
 }
 
 :root {
-  --pink: #f56a14;
+  --primary: #00bfa6;
   --black-light: #333333;
   --black: #000000;
   --white: #ffffff;
 }
 
 nav {
-  background-color: var(--pink);
+  background-color: var(--primary);
   padding: 1rem;
   display: flex;
   justify-content: center;
@@ -52,7 +52,7 @@ main textarea {
 
 main button {
   padding: 1rem;
-  background-color: var(--pink);
+  background-color: var(--primary);
   border: none;
   font-size: 1.25rem;
   width: 18rem;
@@ -67,7 +67,7 @@ main p {
 }
 
 footer {
-  background-color: var(--pink);
+  background-color: var(--primary);
   padding: 1.5rem;
   width: 100vw;
   position: fixed;
